@@ -27,8 +27,9 @@ repositories {
 //
   gradlePluginPortal()
 //
-  maven { url = uri("https://repo.spring.io/release") }
   maven { url = uri("https://package-int.hcloud.hmc.co.kr/repository/maven-public") }
+  maven { url = uri("https://repo.spring.io/release") }
+
 //
 
   mavenLocal()
@@ -116,6 +117,9 @@ dependencies {
 
   implementation "org.springframework.boot:spring-boot-devtools"
 
+//  implementation 'co.elastic.apm:apm-agent-attach:1.34.1'
+
+  annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
 //  implementation 'org.springframework:spring-context-indexer:6.0.7'
 
@@ -252,37 +256,40 @@ dependencies {
 //}
 
 bootBuildImage {
-  imageName = "kilmmk/ccsp20-metering-graalvm:1.1.9"
+  imageName = "localhost:5000/ccsp20-metering-graalvm:1.2.0"
 //  tags = ['kilmmk/ccsp20-metering-graalvm:1.1.6']
 
 //  args = ""
 
   environment = [
+//          "BP_LOG_LEVEL": "INFO",
+          'BP_JVM_VERSION': '17.0.7',
           'BP_NATIVE_IMAGE': 'true',
-          'BP_NATIVE_IMAGE_BUILD_ARGUMENTS':
-                  '--initialize-at-build-time=' +
-                          'org.slf4j.impl.StaticLoggerBinder' +
-                          ',org.slf4j.LoggerFactory' +
-                          ',ch.qos.logback.classic.Logger' +
-                          ',ch.qos.logback.core.spi.AppenderAttachableImpl' +
-                          ',ch.qos.logback.core.status.StatusBase' +
-                          ',ch.qos.logback.classic.Level' +
-                          ',ch.qos.logback.core.status.InfoStatus' +
-                          ',ch.qos.logback.classic.PatternLayout' +
-                          ',ch.qos.logback.core.CoreConstants'+
-                          ',org.apache.commons.logging.impl.SLF4JLocationAwareLog '+
-                          '--trace-object-instantiation=org.apache.commons.logging.impl.SLF4JLocationAwareLog -Dspring.profiles.active=dev ',
+//          'BP_NATIVE_IMAGE_BUILD_ARGUMENTS':
+//                  '-Djavax.net.ssl.trustStor --initialize-at-build-time=' +
+//                          'org.slf4j.impl.StaticLoggerBinder' +
+//                          ',org.slf4j.LoggerFactory' +
+//                          ',ch.qos.logback.classic.Logger' +
+//                          ',ch.qos.logback.core.spi.AppenderAttachableImpl' +
+//                          ',ch.qos.logback.core.status.StatusBase' +
+//                          ',ch.qos.logback.classic.Level' +
+//                          ',ch.qos.logback.core.status.InfoStatus' +
+//                          ',ch.qos.logback.classic.PatternLayout' +
+//                          ',ch.qos.logback.core.CoreConstants'+
+//                          ',org.apache.commons.logging.impl.SLF4JLocationAwareLog '+
+//                          '--trace-object-instantiation=org.apache.commons.logging.impl.SLF4JLocationAwareLog, ',
           'BPE_DELIM_JAVA_TOOL_OPTIONS': ' ',
-          'BPE_APPEND_JAVA_TOOL_OPTIONS': '-javaagent=/workspace/BOOT-INF/lib/elastic-apm-agent-1.34.1.jar -Dspring.profiles.active=dev',
+          'BPE_APPEND_JAVA_TOOL_OPTIONS': '-Dspring.aot.enabled=true -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -Xms256m -Xmx256m -XX:MaxDirectMemorySize=256m ' ,
 //
 ////          'ELASTIC_APM_SERVER_URLS':'http://ccs-es-apm-apm-server.observability:8200',
-          'JAVA_TOOL_OPTIONS' : '-javaagent=/workspace/BOOT-INF/lib/elastic-apm-agent-1.34.1.jar'
+          //'JAVA_TOOL_OPTIONS' : '-Dspring.profiles.active=local -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -Xms256m -Xmx256m -XX:MaxDirectMemorySize=256m'
+          //'JAVA_TOOL_OPTIONS' : '-javaagent=/workspace/BOOT-INF/lib/elastic-apm-agent-1.34.1.jar -Dspring.profiles.active=local -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -Xms256m -Xmx256m -XX:MaxDirectMemorySize=256m'
 
   ]
-//  buildpacks = ["gcr.io/paketo-buildpacks/java-native-image", "urn:cnb:builder:paketo-buildpacks/java"]
+//  buildpacks = ["gcr.io/paketo-buildpacks/graalvm", "urn:cnb:builder:paketo-buildpacks/java"]
 
 
-  builder = "paketobuildpacks/builder:tiny"
+  builder = "paketobuildpacks/builder:base"
 //  buildpacks = ["file://c:/buildpack.tar.gz", "urn:cnb:builder:paketo-buildpacks/java"]
 }
 
@@ -309,7 +316,7 @@ bootBuildImage {
 ////                  ',org.apache.commons.logging.impl.SLF4JLocationAwareLog '+
 ////          '--trace-object-instantiation=org.apache.commons.logging.impl.SLF4JLocationAwareLog -Dspring.profiles.active=dev ',
 ////          'BPE_DELIM_JAVA_TOOL_OPTIONS': ' ',
-////          'BPE_APPEND_JAVA_TOOL_OPTIONS': '-javaagent=/workspace/BOOT-INF/lib/elastic-apm-agent-1.34.1.jar -Dspring.profiles.active=dev',
+////          'BPE_APPEND_JAVA_TOOL_OPTIONS': '-javaagent=/workspace/BOOT-INF/lib/elastic-apm-agent-1.34.1.jar -Dspring.profiles.active=dev -XX:+UnlockExperimentalVMOptions',
 //
 ////          'ELASTIC_APM_SERVER_URLS':'http://ccs-es-apm-apm-server.observability:8200',
 ////          'JAVA_TOOL_OPTIONS' : '-javaagent=/workspace/BOOT-INF/lib/elastic-apm-agent-1.34.1.jar'
